# davidos-mcp

./: .gitignore  CHATGPT_APP_SUBMISSION.md  LESSONS_LEARNED.md  MCP_SERVER_INFO.md  railway.json  test_mcp.html  test_mcp.py
davidos-mcp/: .dockerignore  .env.example  Dockerfile  README.md  app-manifest.json  docker-compose.yml  main.py  openapi.yaml  pyproject.toml  railway.json  requirements.txt
davidos-mcp/app/: __init__.py  auth.py  config.py  file_manager.py  mcp_auth.py  mcp_fastmcp.py  mcp_init.py  mcp_protocol.py  mcp_server.py  oauth_protocol.py  resources.py  token_storage.py  tools.py
davidos-mcp/components/: context_widget.html  decision_widget.html  file_widget.html  question_widget.html  search_widget.html
davidos-mcp/davidos/: context.md  index.md
davidos-mcp/davidos/execution/: decision-log.md
davidos-mcp/davidos/organisation/: product-org.md
davidos-mcp/davidos/strategy/: open-questions.md  product-vision.md  risks.md  strategic-bets.md
tests/: test_operations.py
